--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "sass": "^1.77.6",
+    "styled-components": "^6.1.11",
+    "styled-reset": "^4.5.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
